queries about us imagen andy y berto y footer

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,10 +18,11 @@ body {
   padding: 20px;
 }
 .footer-container .footer-section {
-  display: flex;
   flex-direction: column;
-  align-content: space-between;
-  width: 200px;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 300px;
+  align-items: center;
 }
 .footer-container .footer-section h3 {
   font-size: 18px;
@@ -34,6 +35,7 @@ body {
 .footer-container .footer-section ul {
   list-style: none;
   padding: 0;
+  align-items: center;
 }
 .footer-container .footer-section ul li a {
   text-transform: uppercase;
@@ -257,7 +259,7 @@ body {
   gap: 100px;
 }
 .owners .container-intro .robandy1 {
-  max-width: 20%;
+  width: 20%;
   text-align: center;
   height: 500px;
   padding-bottom: 20px;
@@ -476,11 +478,6 @@ body {
   background-color: #060709 !important;
   color: #fafafa;
 }
-.container-accordion .accordion .accordion-item .accordion-header .accordion-button:true {
-  background-color: #060709 !important;
-  color: #fafafa;
-  box-shadow: none;
-}
 .container-accordion .accordion .accordion-item .accordion-header .accordion-collapse {
   background-color: white;
   color: #060709;
@@ -489,9 +486,6 @@ body {
 @media screen and (max-width: 1092px) {
   .container-intro .robandy1 {
     width: 300px;
-  }
-  .container-intro .robandy1 .robandy {
-    width: 10px;
   }
   .container-intro .robandy1 h2 {
     font-size: 18px;
@@ -577,17 +571,9 @@ body {
     margin-top: 25px;
     margin-bottom: 25px;
   }
-  .container-intro .robandy1 .robandy {
-    width: auto;
-    height: 200px;
-  }
   .container-intro .robandy1 h2 {
     font-size: 20px;
     font-style: bold;
-  }
-  .container-intro .robandy1 {
-    width: 70%;
-    text-align: center;
   }
 }
 @media (max-width: 600px) {
@@ -615,13 +601,17 @@ body {
 }
 @media screen and (max-width: 550px) {
   .owners .container-intro {
-    display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 10px;
+    padding-bottom: 0px;
+    width: 100%;
   }
-  .robandy1 h2 {
-    font-size: 16px;
+  .owners .container-intro .robandy1 {
+    max-width: none;
+    width: 60%;
+    margin-bottom: 30px;
+    height: auto;
   }
 }
 @media (max-width: 538px) {
@@ -651,16 +641,15 @@ body {
   }
 }
 @media screen and (max-width: 470px) {
+  .formulario .form {
+    width: 60%;
+    padding: 18px;
+  }
+  .formulario .form .subscribe1 {
+    font-size: 22px;
+  }
   .formulario .form h2 {
-    font-size: 18px;
-  }
-  .form .subscribe1 {
-    font-size: 14px;
-  }
-  .formulario {
-    font-size: 14px;
-    padding: 10px;
-    margin-inline: 10px;
+    font-size: 24px !important;
   }
 }
 @media screen and (max-width: 450px) {
