--- a/scss/paginas/_aboutus.scss
+++ b/scss/paginas/_aboutus.scss
@@ -33,7 +33,7 @@
         gap: 100px;
         
         .robandy1 {
-            max-width: 20%;
+            width: 20%;
             text-align: center;
             height: 500px;
             padding-bottom: 20px;
