--- a/css/estilos.css
+++ b/css/estilos.css
@@ -629,15 +629,15 @@ body {
   }
 }
 @media (max-width: 530px) {
-  .carousel .carousel-inner .carousel-item .carousel-caption .h2 {
-    font-size: 16px;
+  .carousel .carousel-inner .carousel-item .carousel-caption h2 {
+    font-size: 14px;
     gap: 0px;
   }
-  .carousel .carousel-inner .carousel-item .carousel-caption .h3 {
-    font-size: 14px;
+  .carousel .carousel-inner .carousel-item .carousel-caption h3 {
+    font-size: 10px;
   }
-  .carousel .carousel-inner .carousel-item .carousel-caption .h5 {
-    font-size: 12px;
+  .carousel .carousel-inner .carousel-item .carousel-caption h5 {
+    font-size: 8px;
   }
 }
 @media screen and (max-width: 470px) {
