--- a/scss/base/_queries.scss
+++ b/scss/base/_queries.scss
@@ -174,27 +174,22 @@
     }
 }
 
-@media (max-width:530px) {
-    .carousel .carousel-inner .carousel-item .carousel-caption {
-        .h2 {
-            font-size: 16px;
-            gap: 0px;
-        }
+// @media (max-width:530px) {
+//     .carousel .carousel-inner .carousel-item .carousel-caption h2{
+//         font-size: 20px;
+//         line-height: 1.8;
+//         font-weight: 0;
+//         }
+//     .carousel .carousel-inner .carousel-item .carousel-caption h3 {
+//         font-size: 18px;
+//         }
+//     .carousel .carousel-inner .carousel-item .carousel-caption h5 {
+//         font-size: 18px;
+//         }
+// }
 
-        .h3 {
-            font-size: 14px;
-        }
-
-        .h5 {
-            font-size: 12px;
-        }
-    }
-}
 
 @media screen and (max-width:470px) {
-    // .formulario {
-    //     font-size: 14px;    
-    // }
     .formulario .form{
         width: 60%;
         padding: 18px;
