--- a/scss/paginas/_main-hero.scss
+++ b/scss/paginas/_main-hero.scss
@@ -39,117 +39,118 @@
     .carousel-caption {
         display: flex;
         align-content: center;
-        // font-size: 22px;
-        // margin-bottom: 30px;
-        // color: #fafafa;
-        // border-radius: 12px;
-        // height: 25vh;
-        h2{
-            font-size: 22px;
-        }
-        h3 {
-            font-size: 20px;
-        }
+        .carousel-inner {
+            .carousel-item {
+                h2 {
+                    font-size: 20px;
+                }
 
-        h5 {
-            font-size: 16px;
-        }
-    }
-}
+                h3 {
+                    font-size: 18px;
+                }
 
-/* about the product_ cta buy and details*/
-.product {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    align-items: center;
-    height: 50%;
-    margin: 50px;
-
-    img {
-        height: 40vh;
-        width: 40vh;
-        border-radius: 8px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-        margin-left: 40px;
-    }
-
-    div {
-        font-style: italic;
-        font-size: 20px;
-        color: #060709;
-        text-align: left;
-        padding: 20px;
-        margin-left: 30px;
-
-        p {
-            font-size: 20px;
-            margin-bottom: 20px;
-        }
-    }
-
-    .button1,
-    .button2 {
-        display: inline-block;
-        text-decoration: none;
-        padding: 10px 20px;
-        font-size: 16px;
-        border-radius: 6px;
-        margin: 10px 5px 0 0;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-        transition: all 0.3s ease;
-        cursor: pointer;
-    }
-
-    .button1 {
-        background-color: #fafafa;
-        border: 1px solid black;
-        list-style: none;
-        margin-right: 40px;
-        color: #060709;
-        font-size: 18px;
-
-        &:hover {
-            background-color: #e6e6e6;
-        }
-    }
-
-    .button2 {
-        background-color: #060709;
-        color: #fafafa;
-        border: 1px solid black;
-        list-style: none;
-        font-size: 18px;
-        &:hover {
-            background-color: #333;
+                h5 {
+                    font-size: 18px;
+                }
+            }
         }
     }
 }
+        /* about the product_ cta buy and details*/
+        .product {
+            display: flex;
+            justify-content: space-between;
+            align-content: center;
+            align-items: center;
+            height: 50%;
+            margin: 50px;
 
-/*collabs*/
-.collabs-title {
-    text-align: center;
-    font-size: 25px;
-    font-weight: 300px;
-    margin-top: 60px;
-    margin-bottom: 15px;
-    text-transform: uppercase;
-}
+            img {
+                height: 40vh;
+                width: 40vh;
+                border-radius: 8px;
+                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+                margin-left: 40px;
+            }
 
-.collabs {
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
-    display: flex;
-    margin-bottom: 30px;
+            div {
+                font-style: italic;
+                font-size: 20px;
+                color: #060709;
+                text-align: left;
+                padding: 20px;
+                margin-left: 30px;
 
-    img {
-        height: 85px;
-        width: auto;
-        border-radius: 10px;
-        &:hover{
-        transform: scale(120%);
-        transition-duration: 1s;
+                p {
+                    font-size: 20px;
+                    margin-bottom: 20px;
+                }
+            }
+
+            .button1,
+            .button2 {
+                display: inline-block;
+                text-decoration: none;
+                padding: 10px 20px;
+                font-size: 16px;
+                border-radius: 6px;
+                margin: 10px 5px 0 0;
+                box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+                transition: all 0.3s ease;
+                cursor: pointer;
+            }
+
+            .button1 {
+                background-color: #fafafa;
+                border: 1px solid black;
+                list-style: none;
+                margin-right: 40px;
+                color: #060709;
+                font-size: 18px;
+
+                &:hover {
+                    background-color: #e6e6e6;
+                }
+            }
+
+            .button2 {
+                background-color: #060709;
+                color: #fafafa;
+                border: 1px solid black;
+                list-style: none;
+                font-size: 18px;
+
+                &:hover {
+                    background-color: #333;
+                }
+            }
         }
-    }
-}
+
+        /*collabs*/
+        .collabs-title {
+            text-align: center;
+            font-size: 25px;
+            font-weight: 300px;
+            margin-top: 60px;
+            margin-bottom: 15px;
+            text-transform: uppercase;
+        }
+
+        .collabs {
+            justify-content: center;
+            align-items: center;
+            gap: 40px;
+            display: flex;
+            margin-bottom: 30px;
+
+            img {
+                height: 85px;
+                width: auto;
+                border-radius: 10px;
+
+                &:hover {
+                    transform: scale(120%);
+                    transition-duration: 1s;
+                }
+            }
+        }
