--- a/scss/paginas/_main-hero.scss
+++ b/scss/paginas/_main-hero.scss
@@ -7,7 +7,7 @@
     background-image: url(../img/underwater.jpg);
     background-size: cover;
     background-position: center 38%;
-    color: #fafafa;
+    color: blue;
     padding: 15vh 20px;
     text-align: center;
 
