--- a/scss/paginas/_aboutus.scss
+++ b/scss/paginas/_aboutus.scss
@@ -70,7 +70,7 @@
             object-fit: cover;
             transition: 0.5s;
             &:hover{
-                transform: scale(120%);
+                transform:scale(30px)
             }
         }
 
