funcionalidades aplicadas con use

--- a/scss/base/_funcionalidades.scss
+++ b/scss/base/_funcionalidades.scss
@@ -1,6 +1,8 @@
 /*Colores pagina*/
 $color_base: #060709;
 $color_detalles: #F0E9E9;
+$hover_claro: #e6e6e6;
+$hover_oscuro: #333;
 
 
 /*listas nph($sizes, n°)*/
