--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,18 +1,701 @@
-/* Error: Undefined variable.
- *   ,
- * 7 |     background-color: $color_detalles;
- *   |                       ^^^^^^^^^^^^^^^
- *   '
- *   scss\base\_generales.scss 7:23  @use
- *   scss\estilos.scss 1:1           root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a   \2577 \a 7 \2502      background-color: $color_detalles;\d\a   \2502                        ^^^^^^^^^^^^^^^\a   \2575 \a   scss\\base\\_generales.scss 7:23  @use\a   scss\\estilos.scss 1:1           root stylesheet";
+@charset "UTF-8";
+/*Colores pagina*/
+/*listas nph($sizes, n°)*/
+/*extends*/
+* {
+  margin: 0;
+  padding: 0;
 }
+
+body {
+  background-color: #F0E9E9;
+  font-family: "jost", sans-serif;
+}
+
+/*footer*/
+.footer-container {
+  display: flex;
+  justify-content: center;
+  background-color: #060709;
+  color: #F0E9E9;
+  font-size: 18px;
+  padding: 20px;
+}
+.footer-container .footer-section {
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 300px;
+  align-items: center;
+}
+.footer-container .footer-section h3 {
+  font-size: 18px;
+  transition: 0.6s;
+  text-transform: uppercase;
+}
+.footer-container .footer-section h3:hover {
+  font-size: 20px;
+}
+.footer-container .footer-section ul {
+  list-style: none;
+  padding: 0;
+  align-items: center;
+}
+.footer-container .footer-section ul li a {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #F0E9E9;
+  text-transform: initial;
+  font-size: 16px;
+  text-align: center;
+  transition: 0.6s;
+}
+.footer-container .footer-section ul li a:hover {
+  text-decoration: underline;
+}
+
+/*header*/
+.navbar {
+  background-color: #060709;
+  display: flex;
+  height: 10vh;
+  color: #F0E9E9;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar .container-fluid {
+  background-color: #060709;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar .container-fluid img {
+  height: 50px;
+  padding-right: 30px !important;
+}
+.navbar .container-fluid .navbar-brand {
+  color: #F0E9E9 !important;
+  background-color: transparent !important;
+  padding-bottom: 0;
+  transition: 0.6s;
+}
+.navbar .container-fluid .navbar-brand:hover {
+  font-size: 23px;
+}
+.navbar .container-fluid .navbar-toggler {
+  background-color: #F0E9E9;
+}
+.navbar .container-fluid .navbar-collapse .navbar-nav .nav-link {
+  color: #F0E9E9 !important;
+  background-color: transparent !important;
+  transition: 0.6s;
+}
+.navbar .container-fluid .navbar-collapse .navbar-nav .nav-link:hover {
+  font-size: large !important;
+}
+
+/*Colores pagina*/
+/*listas nph($sizes, n°)*/
+/*extends*/
+/*Colores pagina*/
+/*listas nph($sizes, n°)*/
+/*extends*/
+/*index - hero and image*/
+.main-text {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  margin-top: 20px;
+  background-image: url(../img/underwater.jpg);
+  background-size: cover;
+  background-position: center 38%;
+  color: #F0E9E9;
+  padding: 15vh 20px;
+  text-align: center;
+}
+.main-text::before {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 0;
+}
+.main-text p {
+  position: relative;
+  z-index: 1;
+  font-size: 48px;
+  font-style: italic;
+  text-align: center;
+  padding: 10px;
+  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
+}
+
+/*reviews*/
+.carousel-item img {
+  height: 250px;
+  object-fit: cover;
+}
+.carousel-item .carousel-caption {
+  display: flex;
+  align-content: center;
+}
+.carousel-item .carousel-caption .carousel-inner .carousel-item h2 {
+  font-size: 20px;
+}
+.carousel-item .carousel-caption .carousel-inner .carousel-item h3 {
+  font-size: 18px;
+}
+.carousel-item .carousel-caption .carousel-inner .carousel-item h5 {
+  font-size: 18px;
+}
+
+/* about the product_ cta buy and details*/
+.product {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  height: 50%;
+  margin: 50px;
+}
+.product img {
+  height: 40vh;
+  width: 40vh;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  margin-left: 40px;
+}
+.product div {
+  font-style: italic;
+  font-size: 20px;
+  color: #060709;
+  text-align: left;
+  padding: 20px;
+  margin-left: 30px;
+}
+.product div p {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.product .button1,
+.product .button2 {
+  display: inline-block;
+  text-decoration: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 6px;
+  margin: 10px 5px 0 0;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+.product .button1 {
+  background-color: #F0E9E9;
+  border: 1px solid black;
+  list-style: none;
+  margin-right: 40px;
+  color: #060709;
+  font-size: 18px;
+}
+.product .button1:hover {
+  background-color: #e6e6e6;
+}
+.product .button2 {
+  background-color: #060709;
+  color: #F0E9E9;
+  border: 1px solid black;
+  list-style: none;
+  font-size: 18px;
+}
+.product .button2:hover {
+  background-color: #333;
+}
+
+/*collabs*/
+.collabs-title {
+  text-align: center;
+  font-size: 25px;
+  font-weight: 300px;
+  margin-top: 60px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+
+.collabs {
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+  display: flex;
+  margin-bottom: 30px;
+}
+.collabs img {
+  height: 85px;
+  width: auto;
+  border-radius: 10px;
+}
+.collabs img:hover {
+  transform: scale(120%);
+  transition-duration: 1s;
+}
+
+/*about us*/
+.top_pict2 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-image: url(../img/berto_jono.jpg);
+  background-size: cover;
+  background-position: center 28%;
+  height: 120px;
+  margin-top: 20px;
+}
+.top_pict2 p {
+  color: #F0E9E9;
+  text-align: right;
+  font-size: 24px;
+  text-shadow: 1px 1px 2px black;
+  padding: 10px;
+  margin-bottom: 0px !important;
+}
+
+.owners .paragraphikigai {
+  text-align: center;
+  padding: 30px;
+  margin-top: 10px;
+}
+.owners .container-intro {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  gap: 100px;
+}
+.owners .container-intro .robandy1 {
+  width: 20%;
+  text-align: center;
+  height: 500px;
+  padding-bottom: 20px;
+}
+.owners .container-intro .robandy1 .robandy {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+.owners .container-intro .robandy1 h2 {
+  font-size: 24px;
+  padding-top: 10px;
+}
+.owners .container-intro .robandy1 p {
+  font-size: 16px;
+}
+
+.grid-pictures {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 200px);
+  gap: 5px;
+  margin: 20px 70px;
+}
+.grid-pictures .grid-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s;
+}
+.grid-pictures .grid-item img:hover {
+  transform: scale(30px);
+}
+.grid-pictures .grid-item.img-1, .grid-pictures .grid-item.img-4 {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+/*contact_us*/
+.top_pict4 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-image: url(../img/robfishing.jpg);
+  background-size: cover;
+  background-position: center 60%;
+  height: 120px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.top_pict4 p {
+  color: #F0E9E9;
+  text-align: right;
+  font-size: 24px;
+  text-shadow: 1px 1px 2px black;
+  padding: 10px;
+  margin-bottom: 0px !important;
+}
+
+/*formulario*/
+.formulario {
+  display: flex;
+  justify-content: center;
+}
+.formulario form {
+  width: 50%;
+  background-color: #060709;
+  color: #F0E9E9;
+  margin-bottom: 40px;
+  text-align: left;
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
+  margin-inline: 200px;
+}
+.formulario form h2 {
+  text-align: center;
+  margin-bottom: 15px;
+}
+.formulario form input {
+  padding: 10px;
+  margin: 10px;
+}
+.formulario form select {
+  padding: 5px;
+  margin: 10px;
+  border-radius: 8px;
+  height: 40px;
+}
+.formulario form textarea {
+  padding: 20px;
+  margin: 10px;
+  border-radius: 8px;
+}
+.formulario form input {
+  height: 40px;
+  border-radius: 8px;
+}
+.formulario form .subscribe1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  width: 90%;
+  margin-bottom: px;
+}
+.formulario form .send {
+  width: 100%;
+  text-align: center;
+}
+.formulario form .send .button2b {
+  background-color: #fafafa;
+  color: #060709;
+  text-decoration: none;
+  border: 1px solid black;
+  padding: 10px 16px;
+  border-radius: 10px;
+  list-style: none;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+  font-size: 18px;
+}
+
+/*details*/
+.top_pict {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-image: url(../img/under_water.jpg);
+  background-size: cover;
+  background-position: center 55%;
+  height: 120px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.top_pict p {
+  color: #F0E9E9;
+  text-align: right;
+  font-size: 24px;
+  text-shadow: 1px 1px 2px black;
+  padding: 10px;
+  margin-bottom: 0px !important;
+}
+
+.title-details {
+  text-align: center;
+}
+
+.list-of-details {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.list-of-details div:nth-child(n) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+}
+.list-of-details div .details-pole {
+  width: 200px;
+  height: auto;
+  border-radius: 150px;
+  margin-right: 30px;
+}
+.list-of-details div p:nth-child(n) {
+  width: 60%;
+}
+
+/*FAQ*/
+.top_pict3 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  background-image: url(../img/hi5.jpg);
+  background-size: cover;
+  background-position: center 48%;
+  height: 120px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.top_pict3 p {
+  color: #F0E9E9;
+  text-align: right;
+  font-size: 24px;
+  text-shadow: 1px 1px 2px black;
+  padding: 10px;
+  margin-bottom: 0px !important;
+}
+
+.title-faq {
+  font-size: 20px;
+  text-align: center;
+}
+
+.container-accordion {
+  display: flex;
+  justify-content: center;
+}
+.container-accordion .accordion {
+  width: 75%;
+  box-shadow: none;
+  margin-bottom: 70px;
+}
+.container-accordion .accordion .accordion-item {
+  box-shadow: none;
+}
+.container-accordion .accordion .accordion-item .accordion-header {
+  --bs-accordion-btn-focus-box-shadow: none;
+}
+.container-accordion .accordion .accordion-item .accordion-header .accordion-button {
+  background-color: #060709 !important;
+  color: #fafafa;
+}
+.container-accordion .accordion .accordion-item .accordion-header .accordion-button:not(.collapsed) {
+  background-color: #060709 !important;
+  color: #fafafa;
+}
+.container-accordion .accordion .accordion-item .accordion-header .accordion-collapse {
+  background-color: white;
+  color: #060709;
+}
+
+@media screen and (max-width: 1092px) {
+  .container-intro .robandy1 {
+    width: 300px;
+  }
+  .container-intro .robandy1 h2 {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .formulario .form {
+    width: 70%;
+  }
+}
+@media (max-width: 793px) {
+  .product div {
+    font-size: 18px;
+    padding: 15px;
+    margin-left: 20px;
+  }
+}
+@media screen and (max-width: 773px) {
+  .d-none {
+    display: block !important;
+  }
+}
+@media screen and (max-width: 768px) {
+  .main-text p {
+    font-size: 40px;
+  }
+}
+@media (max-width: 695px) {
+  .product div .button1,
+  .product div .button2 {
+    padding: 8px 14px;
+    border-radius: 4px;
+    margin-right: 10px;
+    font-size: 14px;
+  }
+}
+@media (max-width: 640px) {
+  .product div .button1,
+  .product div .button2 {
+    padding: 6px 12px;
+    border-radius: 4px;
+    margin-right: 8px;
+  }
+  .product div {
+    font-size: 16px;
+    padding: 12px;
+    margin-left: 18px;
+    text-align: center;
+  }
+  .product img {
+    height: 30vh;
+    width: 30vh;
+    margin-left: 30px;
+  }
+}
+@media screen and (max-width: 650px) {
+  .top_pict p {
+    font-size: 18px;
+  }
+  .top_pict4 p {
+    font-size: 18px;
+  }
+  .top_pict2 p {
+    font-size: 18px;
+  }
+  .top_pict3 p {
+    font-size: 18px;
+  }
+  .list-of-details div .details-pole {
+    width: 150px;
+    height: auto;
+  }
+  .list-of-details div p {
+    font-size: 14px;
+  }
+  .grid-pictures {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(7, 200px);
+    gap: 3px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+  }
+  .container-intro .robandy1 h2 {
+    font-size: 20px;
+    font-style: bold;
+  }
+}
+@media (max-width: 600px) {
+  .main-text p {
+    font-size: 50px;
+  }
+  .collabs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 15px;
+  }
+  .collabs-title {
+    font-size: 18px;
+    font-weight: 150px;
+    text-transform: uppercase;
+  }
+  .owners .paragraphikigai {
+    text-align: center;
+    padding: 30px;
+    margin-top: 10px;
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .owners .container-intro {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding-bottom: 0px;
+    width: 100%;
+  }
+  .owners .container-intro .robandy1 {
+    max-width: none;
+    width: 60%;
+    margin-bottom: 30px;
+    height: auto;
+  }
+}
+@media (max-width: 538px) {
+  .product {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+  }
+}
+@media (max-width: 535px) {
+  .main-text p {
+    font-size: 35px;
+    margin-left: 0px;
+  }
+}
+@media screen and (max-width: 470px) {
+  .formulario .form {
+    width: 60%;
+    padding: 18px;
+  }
+  .formulario .form .subscribe1 {
+    font-size: 22px;
+  }
+  .formulario .form h2 {
+    font-size: 24px !important;
+  }
+}
+@media screen and (max-width: 450px) {
+  .list-of-details div {
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    justify-content: center;
+    text-align: center;
+  }
+  .title-details {
+    font-size: 16px;
+  }
+  .list-of-details div p:nth-child(n) {
+    width: 90%;
+  }
+}
+@media (max-width: 414px) {
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 400px) {
+  .main-text p {
+    font-size: 24px;
+    margin-left: 0px;
+  }
+}
+@media (max-width: 374px) {
+  .main-text p {
+    font-size: 20px;
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 365px) {
+  .formulario .form h2 {
+    font-size: 16px;
+  }
+  .form .subscribe1 {
+    font-size: 12px;
+  }
+  .formulario {
+    font-size: 12px;
+    padding: 5px;
+    margin-inline: 5px;
+  }
+}
+
+/*# sourceMappingURL=estilos.css.map */
