--- a/css/estilos.css
+++ b/css/estilos.css
@@ -638,6 +638,20 @@ body {
     margin-left: 0px;
   }
 }
+@media (max-width: 530px) {
+  .carousel .carousel-inner .carousel-item .carousel-caption h2 {
+    font-size: 16px;
+    line-height: 1.2;
+    font-weight: 0;
+    font-weight: normal;
+  }
+  .carousel .carousel-inner .carousel-item .carousel-caption h3 {
+    font-size: 14px;
+  }
+  .carousel .carousel-inner .carousel-item .carousel-caption h5 {
+    font-size: 12px;
+  }
+}
 @media screen and (max-width: 470px) {
   .formulario .form {
     width: 60%;
