--- a/scss/base/_queries.scss
+++ b/scss/base/_queries.scss
@@ -174,19 +174,20 @@
     }
 }
 
-// @media (max-width:530px) {
-//     .carousel .carousel-inner .carousel-item .carousel-caption h2{
-//         font-size: 20px;
-//         line-height: 1.8;
-//         font-weight: 0;
-//         }
-//     .carousel .carousel-inner .carousel-item .carousel-caption h3 {
-//         font-size: 18px;
-//         }
-//     .carousel .carousel-inner .carousel-item .carousel-caption h5 {
-//         font-size: 18px;
-//         }
-// }
+@media (max-width:530px) {
+    .carousel .carousel-inner .carousel-item .carousel-caption h2{
+        font-size: 16px;
+        line-height: 1.2;
+        font-weight: 0;
+        font-weight: normal;
+        }
+    .carousel .carousel-inner .carousel-item .carousel-caption h3 {
+        font-size: 14px;
+        }
+    .carousel .carousel-inner .carousel-item .carousel-caption h5 {
+        font-size: 12px;
+        }
+}
 
 
 @media screen and (max-width:470px) {
