--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -10,6 +10,61 @@ body {
     font-family: "jost", sans-serif;
 }
 
+/*header*/
+.navbar {
+    background-color: #060709;
+    display: flex;
+    height: 10vh;
+    color: $color_detalles;
+    align-items: center;
+    justify-content: space-between;
+
+    .container-fluid {
+        background-color: #060709;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        img {
+            height: 50px;
+            padding-right: 30px !important;
+        }
+        h1{
+            font-size: 1.4rem;
+        }
+
+        .navbar-brand {
+            color: $color_detalles !important;
+            background-color: transparent !important;
+            padding-bottom: 0;
+            transition: 0.6s;
+
+            &:hover {
+                font-size: 23px;
+            }
+        }
+
+        .navbar-toggler {
+            background-color: $color_detalles;
+        }
+
+        .navbar-collapse {
+            .navbar-nav {
+                .nav-link {
+                    color: $color_detalles !important;
+                    background-color: transparent !important;
+                    transition: 0.6s;
+                    font-size: 1.3rem;
+
+                    &:hover {
+                        font-size: large !important;
+                    }
+                }
+            }
+        }
+    }
+}
+
 /*footer*/
 .footer-container {
     display: flex;
@@ -59,55 +114,3 @@ body {
         }
     }
 }
-
-
-    /*header*/
-    .navbar {
-        background-color: #060709;
-        display: flex;
-        height: 10vh;
-        color: $color_detalles;
-        align-items: center;
-        justify-content: space-between;
-
-        .container-fluid {
-            background-color: #060709;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-
-            img {
-                height: 50px;
-                padding-right: 30px !important;
-            }
-
-            .navbar-brand {
-                color: $color_detalles !important;
-                background-color: transparent !important;
-                padding-bottom: 0;
-                transition: 0.6s;
-
-                &:hover {
-                    font-size: 23px;
-                }
-            }
-
-            .navbar-toggler {
-                background-color: $color_detalles;
-            }
-
-            .navbar-collapse {
-                .navbar-nav {
-                    .nav-link {
-                        color: $color_detalles !important;
-                        background-color: transparent !important;
-                        transition: 0.6s;
-
-                        &:hover {
-                            font-size: large !important;
-                        }
-                    }
-                }
-            }
-        }
-    }
